# VoiceAvatarAI

./: .replit  README.md  app.py  models.py  pyproject.toml  replit.nix
attached_assets/: Pasted-Project-AI-Digital-Twin-Advanced-Conversational-Agent-with-Your-Voice-Avatar-General-Descrip-1737815547717.txt
attached_assets/Documentation/: index.html
attached_assets/Template_file/aiNext/src/components/: banner.jsx
attached_assets/Template_file/aiNext/src/layout/: footer.jsx
instance/: digital_twin.db
models/: llama-2-7b-chat.gguf
services/: crewai_service.py  elevenlabs_service.py  langchain_service.py  language_service.py  pdf_service.py  twilio_service.py
static/css/: custom.css  style.css
static/js/: main.js  websocket.js
templates/: base.html  index.html
